@@ -1,2 +1,1 @@
-usr/share/doc/constraint/
 usr/share/doc/constraint/test
