@@ -1,6 +1,1 @@
-usr/lib/site-python
-usr/lib/site-python/logilab
-usr/lib/site-python/logilab/constraint
-usr/share/doc/python-constraint
-usr/share/doc/python-constraint
 usr/share/doc/python-constraint/test
