@@ -2,8 +2,9 @@ constraint (0.3.0-5) unstable; urgency=low
 
   * updated debian standards to 3.7.2
   * use debhelper 5
+  * updated to new Python policy (closes: #373308)
 
- -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:04:46 +0200
+ -- Alexandre Fayolle <afayolle@debian.org>  Wed, 14 Jun 2006 17:49:22 +0200
 
 constraint (0.3.0-4) unstable; urgency=low
 
